[#7] ♻️ 리펙토링